# ascend_adapt

./: .gitignore  preinstall
AlgEngine/: CMakeLists.txt  main.cpp
AlgEngine/fcgServer/: CMakeLists.txt  ClientFCG.h  ServerDH.cpp  ServerDH.h  ServerFCG.h  Task.cpp  Task.h
AlgEngine/safe_http/: AlarmFCG.cpp  ClientFCG.h  ServerFCG.cpp  ServerWrapper.cpp  ServerWrapper.h  ThreadSafeQueue.h  Timer.cpp  commonDataType.h
AlgEngine/serverEngineBase/: AmqpClient.cpp  CMakeLists.txt  Timer.h
YoloV3Infer/: build.sh
YoloV3Infer/model/: aipp_yolov3_416_416.aippconfig  yolov3.names  yolov3_tf_bs1_fp16.cfg
Yolov5Infer/: main.cpp  run.sh
dahua/: CMakeLists.txt  main.cpp
dahua/safe_http/: AlarmDataType.h  AlarmFCG.cpp  AlarmFCG.h  AmqpClient.h  CMakeLists.txt  ClientFCG.cpp  ClientFCG.h  ClientWrapper.cpp  ClientWrapper.h  ServerDH.cpp  ServerDH.h  ServerFCG.cpp  ServerFCG.h  ServerWrapper.cpp  ServerWrapper.h  Task.cpp  Task.h  ThreadBase.h  Timer.h  commonDataType.h
dahua/third/include/: FFmpegCodecImpl.h  MFManagerDataType.h
unetplusplus_sdk_python_sample/: main.py
yoloInfer/: CMakeLists.txt  main.cpp  run.sh  yoloInfer
yoloInfer/model/: aipp-bgr.cfg  fusion_result.json  yolov8-pose.cfg
yoloInfer/plugins/yolov5PostProcessPlugin/: CMakeLists.txt  Yolov5PostProcess.h
yoloInfer/plugins/yolov7PostProcessPlugin/: CMakeLists.txt  Yolov7PostProcess.h
yoloInfer/plugins/yolov8PosePostProcessPlugin/: CMakeLists.txt
yolo_sdk_python_sample/: detect.py  main.py
yolo_sdk_python_sample/model/: fusion_result.json
yolov8-pose/: fusion_result.json
yolov8-pose/YoloV3Infer/: CMakeLists.txt  main.cpp  mxbaseV2_sample
yolov8-pose/YoloV3Infer/model/: fusion_result.json
yolov8-pose/Yolov5Infer/: README.md  mxbaseV2_sample
yolov8-pose/Yolov5Infer/model/: aipp.cfg
yolov8-pose/dahua/safe_http/: ClientWrapper.h  ServerWrapper.cpp  ServerWrapper.h  httpUtils.cpp  httpUtils.h.bak
yolov8-pose/yoloInfer/: CMakeLists.txt  run.sh
yolov8-pose/yoloInfer/model/: fusion_result.json
yolov8-pose/yoloInfer/plugins/: CMakeLists.txt
yolov8-pose/yoloInfer/plugins/yolov5PostProcessPlugin/: Yolov5PostProcess.cpp
yolov8-pose/yoloInfer/plugins/yolov7PostProcessPlugin/: Yolov7PostProcess.cpp
yolov8-pose/yoloInfer/plugins/yolov8PosePostProcessPlugin/: Yolov8PosePostProcess.cpp  Yolov8PosePostProcess.h
yolov8-pose/yolo_sdk_python_sample/: det_utils.bak.py
yolov8-pose/yolo_sdk_python_sample/model/: aipp-v7.cfg
yolov8-pose/yolov8-pose/: main.py
